update 6 for 1.21.1